--- a/common/common.scss
+++ b/common/common.scss
@@ -18,70 +18,6 @@
     }
 }
 
-@if $display_section_2_for_these_groups_only !="" {
-
-    $list_2: str-to-list("#{$display_section_2_for_these_groups_only}", "|");
-
-    .sidebar-section-wrapper.sidebar-section[data-section-name="#{$menu_section_2}"] {
-        display: none;
-    }
-
-    @each $group in $list_2 {
-        body.group-#{$group} {
-            .sidebar-section-wrapper.sidebar-section[data-section-name="#{$menu_section_2}"] {
-                display: block;
-            }
-        }
-    }
-}
-
-@if $display_section_3_for_these_groups_only !="" {
-
-    $list_3: str-to-list("#{$display_section_3_for_these_groups_only}", "|");
-
-    .sidebar-section-wrapper.sidebar-section[data-section-name="#{$menu_section_3}"] {
-        display: none;
-    }
-
-    @each $group in $list_3 {
-        body.group-#{$group} {
-            .sidebar-section-wrapper.sidebar-section[data-section-name="#{$menu_section_3}"] {
-                display: block;
-            }
-        }
-    }
-}
-
-@if $display_section_4_for_these_groups_only !="" {
-
-    $list_4: str-to-list("#{$display_section_4_for_these_groups_only}", "|");
-
-    .sidebar-section-wrapper.sidebar-section[data-section-name="#{$menu_section_4}"] {
-        display: none;
-    }
-
-    @each $group in $list_4 {
-        body.group-#{$group} {
-            .sidebar-section-wrapper.sidebar-section[data-section-name="#{$menu_section_4}"] {
-                display: block;
-            }
-        }
-    }
-}
-
-@if $display_section_5_for_these_groups_only !="" {
-
-    $list_5: str-to-list("#{$display_section_5_for_these_groups_only}", "|");
-
-    .sidebar-section-wrapper.sidebar-section[data-section-name="#{$menu_section_5}"] {
-        display: none;
-    }
-
-    @each $group in $list_5 {
-        body.group-#{$group} {
-            .sidebar-section-wrapper.sidebar-section[data-section-name="#{$menu_section_5}"] {
-                display: block;
-            }
-        }
-    }
+.hide-menu {
+  display: none;
 }
